[package]
name = "chrome"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", default-features = false, features = ["macros", "process", "rt", "time"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "serde_json", "json"] }
thiserror = "1.0"
